php.net |  support |  documentation |  report a bug |  advanced search |  search howto |  statistics |  random bug |  login
Bug #36458 function sleep accept negative value
Submitted: 2006-02-20 04:24 UTC Modified: 2006-02-21 16:35 UTC
From: quick_defect at yahoo dot com Assigned:
Status: Closed Package: Unknown/Other Function
PHP Version: 5.1.2 OS: redhat
Private report: No CVE-ID: None
 [2006-02-20 04:24 UTC] quick_defect at yahoo dot com
Description:
------------
First,if given negative value, I have to interrupt the execution of scripts because it sleep for very long time.(I did not exactly know how long)
Second,if given a int which cause overflow, it also do not work very well.

Reproduce code:
---------------
sleep(-1);
$max=mt_getrandmax();
$of=-$max-2;
sleep($of);

Expected result:
----------------
exception or turn it to a legal value

Actual result:
--------------
sleep for a very long time


Patches

Pull Requests

History

AllCommentsChangesGit/SVN commitsRelated reports
 [2006-02-20 08:20 UTC] derick@php.net
Please try using this CVS snapshot:

  http://snaps.php.net/php5.1-latest.tar.gz
 
For Windows:
 
  http://snaps.php.net/win32/php5.1-win32-latest.zip
 [2006-02-21 09:14 UTC] quick_defect at yahoo dot com
Nothing diffrent...the same as before
 [2006-02-21 09:19 UTC] quick_defect at yahoo dot com
But I see that the behavior of function usleep reasonable this time: warning messages are given and exit endless sleep.But why function sleep remains? PLS fix it.
 [2006-02-21 16:35 UTC] iliaa@php.net
This bug has been fixed in CVS.

Snapshots of the sources are packaged every three hours; this change
will be in the next snapshot. You can grab the snapshot at
http://snaps.php.net/.
 
Thank you for the report, and for helping us make PHP better.


 
PHP Copyright © 2001-2026 The PHP Group
All rights reserved.
Last updated: Fri Sep 25 16:00:02 2026 UTC