Fixed bug #36458 (sleep() accepts negative values).

git-svn-id: http://svn.php.net/repository/php/php-src/php/php-src/branches/PHP_5_1@207662 c90b9560-bf6c-de11-be94-00142212c4b1